fix (dark mode): fix colors on dark mode and z-index on header

--- a/src/App.scss
+++ b/src/App.scss
@@ -5,6 +5,7 @@
   --gray-color: #6b7c85;
   --lightGray-color: #e6e6e6;
   --secondary-color: #313BAC;
+  --shadow-color: #dfdfdf;
   --font-base: 'Poppins', sans-serif;
 }
 
@@ -12,9 +13,10 @@
   --primary-color: #1a1a1a;
   --white-color: #2d2d2d;
   --black-color: #ffffff;
-  --gray-color: #b0b0b0;
+  --gray-color: #a8b3ba;
   --lightGray-color: #404040;
   --secondary-color: #6c7ae0;
+  --shadow-color: #fef4f5;
 }
 
 .app {
