--- a/src/container/Footer/Footer.scss
+++ b/src/container/Footer/Footer.scss
@@ -120,6 +120,7 @@
 
     &:hover {
       background-color: #2430af;
+      color: var(--gray-color);
     }
   }
 
