--- a/src/container/Skills/Skills.scss
+++ b/src/container/Skills/Skills.scss
@@ -10,6 +10,7 @@
 
   display: flex;
   flex-direction: row;
+  align-items: center; 
 
   @media screen and (max-width: 900px) {
     width: 100%;
@@ -54,7 +55,7 @@
     }
 
     &:hover {
-      box-shadow: 0 0 25px #fef4f5;
+      box-shadow: 0 0 20px var(--shadow-color);
     }
 
     @media screen and (min-width: 2000px) {
